@@ -1,5 +1,6 @@
 0.11
  - Add blank lines to code after arguments processing and before return.
+ - Add tests for random_month_year() method.
  - Fix random_month_year() method. There were issue with creating before
    date. e.g. for February 2022.
  - Update copyright years.
